--- a/app/scss/0.4.0/structure.scss
+++ b/app/scss/0.4.0/structure.scss
@@ -56,10 +56,11 @@
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1)
 }
 
-.schema-wrap {
+#schema-wrap {
   width: 100%;
-  margin: unset;
-  padding: -15px;
+  margin: 0;
+  border: none;
+  padding: 0;
   
   .schema-header {
     display: flex;
@@ -73,8 +74,7 @@
     text-transform: uppercase;
     letter-spacing: 1.5px;
     padding: 10px;
-    border: solid 1px #E8E9ED;
-    border-bottom: none;
+    border-top: solid 1px #E8E9ED;
 
     div:first-child {
       margin-left: 80px;
@@ -83,5 +83,16 @@
     div:last-child {
       margin-right: 30px;
     }
+  }
+}
+
+.structure {
+  .schema-title {
+    text-transform: uppercase;
+    color: #4D4D4D;
+    font-size: 16px;
+    font-weight: 300;
+    font-family: 'Rubik';
+    margin: 0;
   }
 }
