--- a/app/scss/_sidebar-layout.scss
+++ b/app/scss/_sidebar-layout.scss
@@ -37,6 +37,9 @@
 
       .main-content-header {
         flex: 0;
+        display: flex;
+        align-items: center;
+        padding: 5px 0;
 
         .header-column {
           display: inline-flex;
