--- a/app/scss/0.4.0/network.scss
+++ b/app/scss/0.4.0/network.scss
@@ -1,6 +1,6 @@
 
 .page-navbar {
-  padding: 10px 20px;
+  padding: 10px 10px;
 
   .row {
     display: flex;
@@ -16,6 +16,10 @@
       width: 20px;
       height: 20px;
       margin-right: 10px;
+
+      &.disabled {
+        cursor: default;
+      }
     }
   }
 
@@ -24,7 +28,7 @@
   }
 
   .breadcrumb {
-    margin-top: 10px;
+    margin-top: 14px;
     font-family: 'Rubik';
     color: #808080;
     > a {
