--- a/app/scss/_buttons.scss
+++ b/app/scss/_buttons.scss
@@ -65,6 +65,10 @@ fieldset[disabled] a.btn {
   @include button-variant($btn-primary-color, $qri-blue, $qri-blue);
 }
 
+.btn-bright {
+  @include button-variant($btn-primary-color, $light-blue-accent, $light-blue-accent);
+}
+
 .btn-dark {
   @include button-variant($white, $primary-dark, $primary-dark)
 }
