--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -100,73 +100,77 @@ $header-font-size: .9rem;
     }
   }
 
+  .text-column .text {
+    font-weight: 400;
+  }
+}
+
+.history-list-item {
   // override sidebar list items in history tab
   // to show a timeline
 
   $timeline-color: #305379;
 
-  .history-list-item {
-    border: none !important;
+  border: none !important;
 
-    &.selected {
-      .history-timeline-dot {
-        background-color: $light-blue-accent;
-        width: 12px;
-        height: 12px;
-        left: -1px;
-      }
-    }
-
-    &.first {
-      .history-timeline-line-top {
-        display: none;
-      }
-    }
-
-    &.last {
-      .history-timeline-line-bottom {
-        display: none;
-      }
-    }
-
-
-    &.sidebar-list-item-text {
-      .icon-column {
-        align-self: start;
-        margin-top: 5px;
-      }
-    }
-
-    .history-timeline-line {
-      width: 4px;
-      background-color: $timeline-color;
-      position: absolute;
-      left: 13px;
-    }
-
-    .history-timeline-line-top {
-      top: 0;
-      height: 16px;
-    }
-
-    .history-timeline-line-bottom {
-      height: 100%
-    }
-
+  &.selected {
     .history-timeline-dot {
-      height: 10px;
-      width: 10px;
-      background-color: $timeline-color;
-      border-radius: 50%;
-      z-index: 1;
-      position: relative;
-      left: 0;
-      transition: all 0.2s;
+      background-color: $light-blue-accent;
+      width: 12px;
+      height: 12px;
+      left: -1px;
     }
+  }
 
-    .text-column .text {
-      font-weight: 400;
+  &.first {
+    .history-timeline-line-top {
+      display: none;
     }
+  }
+
+  &.last {
+    .history-timeline-line-bottom {
+      display: none;
+    }
+  }
+
+  &.foreign {
+    color: grey;
+  }
+
+
+  &.sidebar-list-item-text {
+    .icon-column {
+      align-self: start;
+      margin-top: 5px;
+    }
+  }
+
+  .history-timeline-line {
+    width: 4px;
+    background-color: $timeline-color;
+    position: absolute;
+    left: 13px;
+  }
+
+  .history-timeline-line-top {
+    top: 0;
+    height: 16px;
+  }
+
+  .history-timeline-line-bottom {
+    height: 100%
+  }
+
+  .history-timeline-dot {
+    height: 10px;
+    width: 10px;
+    background-color: $timeline-color;
+    border-radius: 50%;
+    z-index: 1;
+    position: relative;
+    left: 0;
+    transition: all 0.2s;
   }
 }
 
