fix(Schema, Button, NetworkSidebar): various styling/minor fixes
- rename `dataset-sidebar` css to `sidebar`
- adjust button colors ('primary' is now our bright blue, the 'dark' option is our dark blue)
- add `NetworkSidebar` component, and remove the `P2PConnections` component until we get network stats
- fix Icon error in `DatasetComponent`
- fix `table` errors in `Schema`

--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -178,7 +178,11 @@ $header-font-size: .9rem;
 //     Dataset Sidebar    //
 ////////////////////////////
 
-.dataset-sidebar {
+#network-sidebar {
+  height: 100%
+}
+
+.sidebar {
   height: 100%;
   font-size: $header-font-size;
   cursor: default;
@@ -193,7 +197,7 @@ $header-font-size: .9rem;
     padding: 0 10px;
   }
 
-  .dataset-sidebar-header {
+  .sidebar-header {
     p {
       margin-bottom: 2px;
     }
