style: add some margin to list items in network pane

--- a/app/scss/0.4.0/item.scss
+++ b/app/scss/0.4.0/item.scss
@@ -97,12 +97,13 @@
   &.category {
     color: #F8AB31;
     background: #F2F2F2;
-    border-radius: 2px; 
+    border-radius: 2px;
   }
 }
 
 
 .dataset-item {
+  margin: 15px 0;
   padding: 20px;
   background: white;
   border-radius: 5px;
