fix(workbench): don't mutate state tree
fixes a bunch of bugs:
- uses `cloneDeep` whenever we are going to mutate props that have been given to us by the state tree (specifically objects and arrays greater then 1 dimention)
- brings in custom `ContextMenuArea`, found in the `react-electron-contextmenu` issues
- adds back `discardChanges` and ensures status is shown correctly in the workbench sidebar
- adds warning if a user tries to checkout a dataset that has staged changes

--- a/app/scss/_dialog.scss
+++ b/app/scss/_dialog.scss
@@ -116,6 +116,12 @@ dialog {
       }
     }
 
+    .warning {
+      font-weight: 600;
+      color: $error;
+      margin-bottom: $spacer * 2
+    }
+
     // #error {
     //   bottom: 1rem;
     // }
