refactor(MetadataEditor, form): inputs handle their own state
- remove state from MetadataEditor
- this intro's bugs when editing in fsi when the writes happen in quick succession

--- a/app/scss/_forms.scss
+++ b/app/scss/_forms.scss
@@ -528,11 +528,13 @@ input#path, input#bodyPath {
 // MultiTextInput (tags UI)
 .multi-text-input {
   .tag {
-    background: #e4e4e4;
+    background: $primary-dark;
     border-radius: 4px;
     padding: 4px 8px;
     margin: 5px;
     display: inline-block;
+    color: white;
+    font-weight: 700;
 
     .tag-text {
       flex: 1;
