feat(ErrorHandler): handle react errors, crash reports
We've been getting complaints from users of a "blank white screen", which is caused by unhandled exceptions in react code.

While we're learning from past lessons, we've continually gotten incredible ROI for time spent building tools that log and report errors. To that end, I've added a crash reporter to our error handler. Ideally this'll help us diagnose and address fixes faster without forcing users to send us data.

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -43,6 +43,7 @@
 
 @import "0.4.0/icons";
 @import "0.4.0/chrome";
+@import "0.4.0/errorHandler";
 @import "0.4.0/type";
 @import "0.4.0/nav";
 @import "0.4.0/item";
