--- a/app/scss/0.4.0/network.scss
+++ b/app/scss/0.4.0/network.scss
@@ -70,6 +70,9 @@
 
 .search-modal {
   background: #F5F7FA;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 
   .search-modal-switch {
     display: flex;
@@ -86,7 +89,7 @@
       margin-top: -24px;
     }
   }
-  
+
   header {
     padding: 10px 10px 0 10px;
 
