fix(Workbench): if a dataset is not in your namespace, you can't edit it
When we added non-checked out edits, we accidentally removed the blocker on editing datasets that are not in your namespace.

Until we get a clearer picture of how we are doing branching/forking, we are forcing users to start their own dataset history if they want to edit someone else's work

--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -414,7 +414,7 @@ $header-font-size: .9rem;
 //    Unlinked Dataset    //
 ////////////////////////////
 
-.unlinked-dataset {
+.dataset-not-in-namespace {
   height: 100%;
   display: flex;
   justify-content: center;
