fix(compare): reject dataset larger then 10MB, add 'reset' button

--- a/app/scss/0.4.0/compare.scss
+++ b/app/scss/0.4.0/compare.scss
@@ -2,6 +2,20 @@
   background: #123459;
   height: 100%;
 
+  .compare-sidebar-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .reset {
+      cursor: pointer;
+
+      &.disabled {
+        display: none;
+      }
+    }
+  }
+
   .picker {
     display: flex;
 
