--- a/app/scss/_tableDiff.scss
+++ b/app/scss/_tableDiff.scss
@@ -1,10 +1,11 @@
 
 
-.table_diff {
-  min-width: 600px;
+.table-diff {
   background: white;
   box-shadow: 0 0 4px #00000015;
   margin: 20px auto;
+  height: 100%;
+  width: 100%;
 
   .header {
     width: 100%;
@@ -35,57 +36,76 @@
     width: 100%;
   }
 
-  table {
-    font-weight: 400;
+  #table-diff-container {
+    height: 100%;
+    overflow: scroll;
     width: 100%;
+    background: #ffffff;
 
-    .add {
-      background: #86FDA250;
-    }
-    
-    .rem {
-      background: #FB9EA850;
-    }
-
-    .collapsed_row {
-      cursor: pointer;
-      height: 2px;
-      td {
-        height: 2px;
-        background: #A60000;
-        overflow: hidden;
-      }
-    }
-    .previous_row {
-      cursor: pointer;
-    }
-
-    .collapsed_cell {
-      cursor: pointer;
-      position: absolute;
-      top: 0;
-      left: 0;
+    table {
+      font-weight: 400;
+      width: 100%;
       height: 100%;
-      overflow: hidden;
-      width: 5px;
-      background: #A60000;
-      padding-left: 5px;
-    }
-    .previous_cell {
-      cursor: pointer;
-    }
-
-    tr {
-      height: 20px;
-      td {
-        position: relative;
-        border: 1px solid #eee;
-        padding: 2px 10px;
+      
+      thead th{
+        overflow-x: auto;
+        position: sticky;
+        top: 0;
+        background: #e6e6e6;
+        z-index: 10;
+      }
+      
+      tbody {
+        overflow: auto
+      }
+      
+      .add {
+        background: #86FDA250;
+      }
+      
+      .rem {
+        background: #FB9EA850;
+      }
+      
+      .collapsed_row {
+        cursor: pointer;
+        height: 2px;
+        td {
+          height: 2px;
+          background: #A60000;
+          overflow: hidden;
+        }
+      }
+      .previous_row {
+        cursor: pointer;
+      }
+      
+      .collapsed_cell {
+        cursor: pointer;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        overflow: hidden;
+        width: 5px;
+        background: #A60000;
+        padding-left: 5px;
+      }
+      .previous_cell {
+        cursor: pointer;
+      }
+      
+      tr {
+        height: 20px;
+        td {
+          position: relative;
+          border: 1px solid #eee;
+          padding: 2px 10px;
+        }
       }
     }
-  }
+  }  
 }
-
 .change_stat {
   b {
     margin-right: 8px;
