--- a/app/scss/_tableDiff.scss
+++ b/app/scss/_tableDiff.scss
@@ -38,14 +38,14 @@
 
   #table-diff-container {
     height: 100%;
-    overflow: scroll;
+    overflow: auto;
     width: 100%;
     background: #ffffff;
 
     table {
       font-weight: 400;
       width: 100%;
-      height: 100%;
+      margin-bottom: 20px;
       
       thead th{
         overflow-x: auto;
