--- a/app/scss/_site.scss
+++ b/app/scss/_site.scss
@@ -792,12 +792,7 @@ b {
     border-top: 1px solid #ddd;
 
     .CodeMirror-lines * {
-      font-size: 1rem !important;
-      font-weight: normal !important;
-      font-style: normal !important;
-      line-height: normal !important;
-      color: inherit !important;
-      text-decoration: none !important;
+      font-size: 12px !important;
     }
   }
 }
