--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -215,6 +215,7 @@ $header-font-size: .9rem;
     }
 
     .dataset-name {
+
       flex: 1;
       white-space: nowrap;
       text-overflow: ellipsis;
@@ -237,6 +238,9 @@ $header-font-size: .9rem;
       }
 
       &:hover {
+        &.no-pointer {
+          cursor: default;
+        }
         cursor: pointer;
         text-decoration: underline;
       }
