feat(Header): build new Header component with story

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -37,6 +37,7 @@
 @import "tableDiff";
 @import "navbar";
 @import "sidebar-layout";
+@import "header";
 
 @import '~easymde/dist/easymde.min.css';
 @import "dialog";
