feat(DatasetStatus): build DatasetStatus component and story

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -38,6 +38,7 @@
 @import "navbar";
 @import "sidebar-layout";
 @import "header";
+@import "dataset-status";
 
 @import '~easymde/dist/easymde.min.css';
 @import "dialog";
