--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -37,6 +37,8 @@
 @import "tableDiff";
 @import "navbar";
 @import "sidebar-layout";
+@import "header";
+@import "dataset-status";
 
 @import '~easymde/dist/easymde.min.css';
 @import "dialog";
