refactor(webapp): set up store, reducers, and actions
note: had to create a `index_dev.html` and add "unsafe-eval" to the "Content-Security-Policy" in order to quickly get to development. If we continue to work on this webapp, we should research if there is a better way to manage this.

--- a/app/scss/0.4.0/icons.scss
+++ b/app/scss/0.4.0/icons.scss
@@ -22,3 +22,8 @@
   transition: color .2s ease-out;
   color: #9EEE32;
 }
+
+.icon-primary {
+  transition: color .2s ease-out;
+  color: $primary;
+}
