fix(sidebar): network history sidebar overflows correctly
separated the `network-history-list` from `history-list`

Gave padding to the `network-history-list`, to not conflict with the `clone dataset` button

--- a/app/scss/0.4.0/network.scss
+++ b/app/scss/0.4.0/network.scss
@@ -118,8 +118,15 @@
   padding: 0 10px 10px 10px;
 }
 
-#history-list {
+#network-history-list {
   padding: 10px;
   flex-grow: 1;
-  overflow: auto;
+  overflow: hidden;
+  height: 100%;
+  padding-bottom: 120px;
+
+  .list {
+    height: 100%;
+    overflow: auto;
+  }
 }
