--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -59,6 +59,7 @@ $light-blue-accent: #4FC7F3;
 $light-blue-accent-subdued: #2f7791;
 
 $appBackground: $white;
+$dataset-sidebar-color: #f7f8fc;
 $topbar: $primary-light;
 $sink: $primary-light;
 $border-color: rgba(0, 97, 166, .1);
