--- a/app/scss/_welcome.scss
+++ b/app/scss/_welcome.scss
@@ -120,17 +120,24 @@
   }
 }
 
-.checkbox-input-container {
-  display: flex;
-  align-items: center;
+.checkbox-input-container, .radio-input-container {
   font-size: .8rem;
+  line-height: 14px;
 
   input {
-    margin-right: 5px;
+    margin-right: 10px;
   }
 
   span {
     font-size: 0.8rem;
+  }
+
+  strong {
+    font-weight: $font-weight-bold;
+  }
+
+  &.disabled {
+    color: #9a9a9a;
   }
 }
 
