--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -24,6 +24,7 @@
 @import "stylesheet";
 
 @import "dataset";
+@import "transfers";
 @import "drag-drop";
 @import "commit";
 @import "dataset-list";
