--- a/app/scss/_transfers.scss
+++ b/app/scss/_transfers.scss
@@ -44,14 +44,15 @@
     right: 0;
     top: 40px;
     width: 300px;
+    margin-right: 0;
 
     border-radius: 5px;
     overflow: hidden;
-    box-shadow: 0 0 5px #00000020;
+    box-shadow: 0 2px 5px #00000020;
     background: white;
 
     header {
-      padding: 5px 15px 0 15px;
+      padding: 12px 15px 8px 15px;
       text-transform: uppercase;
       font-size: 12px;
       letter-spacing: 1px;
