refactor(DatasetReference): add back component that allows for renames

--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -237,6 +237,7 @@ $header-font-size: .9rem;
     .dataset-reference {
       font-size: 1.05rem;
       display: flex;
+      margin: 20px 20px 0 20px;
     }
 
     .dataset-name {
